src/test/ui/feature-gates/feature-gate-destructuring_assignment.stderr
error[E0658]: destructuring assignments are unstable
  --> $DIR/feature-gate-destructuring_assignment.rs:3:12
   |
LL |     (a, b) = (2, 3);
   |     ------ ^
   |     |
   |     cannot assign to this expression
   |
   = note: see issue #71126 <https://github.com/rust-lang/rust/issues/71126> for more information
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
